Fixed carousel on small screens

--- a/src/Components/CardsCarousel.scss
+++ b/src/Components/CardsCarousel.scss
@@ -33,6 +33,10 @@
     
     overflow: hidden;
     
+    @media screen and (max-width: 1200px) {
+        width: 95vw;
+    }
+    
     &-inner {
         display: flex;
         cursor: grab;
